# laba06

./: .travis.yml  CMakeLists.txt  LICENSE  License.rtf  WixCultureFix.wxs  WixTemolate.wxs  WixTemplate.wxs
.github/workflows/: CI.yml
solver_application/: CMakeLists.txt
